WebAssembly: option to crash if no fast memory is available https://bugs.webkit.org/show_bug.cgi?id=170219

Reviewed by Mark Lam.

* runtime/Options.h:
* wasm/WasmMemory.cpp:
(JSC::Wasm::webAssemblyCouldntGetFastMemory):
(JSC::Wasm::tryGetFastMemory):


Canonical link: https://commits.webkit.org/187141@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214526 268f45cc-cd09-0410-ab3c-d52691b4dbfc